# fast_api_demo

./: Makefile  README.md  pyproject.toml
fast_api_demo/: cli.py  main.py
tests/: test_fast_api_demo.py
